--- a/developmentPlugins/NCBIPrimer/pom.xml
+++ b/developmentPlugins/NCBIPrimer/pom.xml
@@ -90,13 +90,14 @@
                 <configuration>
                     <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>                       
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>       
                         <Import-Package>com.affymetrix.igb.osgi.service,*;resolution:=optional</Import-Package>
                         <Export-Package/>
                         <Bundle-Activator>apollo.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Bundle-Description>Use NCBI BLAST to design PCR primers to amplify a selected feature.</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
