--- a/main/pom.xml
+++ b/main/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igb</artifactId>
-            <scope>compile</scope>
+            <scope>runtime</scope> 
         </dependency>   
         <dependency>
             <groupId>com.affymetrix</groupId>
@@ -88,10 +88,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-csv</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
@@ -101,18 +103,22 @@
         <dependency>
             <groupId>org.broad</groupId>
             <artifactId>bigwig</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <dependency>
             <groupId>commons-pool</groupId>
             <artifactId>commons-pool</artifactId>
+            <scope>runtime</scope> 
         </dependency>
         <!-- End of external bundle dependencies-->
 
@@ -250,16 +256,6 @@
         </dependency> 
         <!--End of plugin module dependencies-->
         <dependency>
-            <groupId>com.lorainelab</groupId>
-            <artifactId>bundle-info</artifactId>
-            <scope>compile</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <scope>compile</scope>            
-        </dependency>
-        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <scope>compile</scope>            
@@ -272,7 +268,7 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <scope>compile</scope>            
+            <scope>runtime</scope>             
         </dependency>
         <dependency>
             <groupId>com.lorainelab</groupId>
@@ -458,8 +454,6 @@
                                     <zipgroupfileset dir="${basedir}/target/lib">
                                         <include name="affymetrix-common-*.jar"/>
                                         <include name="org.apache.felix.main-*.jar"/>
-                                        <include name="bundle-info-*.jar"/>
-                                        <include name="gson-*.jar"/>
                                         <include name="slf4j-api-*.jar"/>
                                         <include name="logback-*.jar"/> 
                                     </zipgroupfileset>
@@ -486,8 +480,7 @@
                         <goals>
                             <goal>
                                 index
-                            </goal>
-                        
+                            </goal>                        
                         </goals>
                         <phase>package</phase>
                         <configuration>
