updated gradle build to add windows keystore pass

--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ task media(dependsOn: cleanOldBuild, type: com.install4j.gradle.Install4jTask) {
     projectFile = file('distribution/igb.install4j')
     variables = [projectHomeDirectory: projectDir, igbVersion: version, codeBaseUrl: System.getProperty('codebaseUrl')]
     macKeystorePassword = System.getProperty('macKeystorePassword')
+    winKeystorePassword = System.getProperty('macKeystorePassword')
 }
 
 clean {
