--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,11 @@ ext.commonProps.load(new FileInputStream('core/common/src/main/resources/common.
 //remove minor version portion of version string
 version = commonProps.get('appVersion')
 
+//securely read in keystore info from disk
+ext.props = new Properties()
+ext.props.load(new FileInputStream(System.getProperty("user.home") + '/build.properties'))
+project.setProperty('props', ext.props)
+
 buildscript {
     repositories {
         mavenLocal()
@@ -36,6 +41,17 @@ install4j {
 
 task cleanOldBuild(type: Delete) {
     delete buildDir
+}
+
+task signExeJar() {
+    ant.signjar(
+            signedjar: "igb_exe.jar",
+            alias: props.get('keyStoreAlias'),
+            jar: "./igb_exe.jar",
+            keystore: System.getProperty("user.home") + '/.keystore',
+            storepass: 'limo162;tent',
+            keypass: 'limo162;tent',
+            preservelastmodified: 'true');
 }
 
 task media(dependsOn: cleanOldBuild, type: com.install4j.gradle.Install4jTask) {
