--- a/developmentPlugins/IGBR/pom.xml
+++ b/developmentPlugins/IGBR/pom.xml
@@ -4,13 +4,13 @@
     <parent>
         <groupId>com.affymetrix</groupId>
         <artifactId>igb-project</artifactId>
-        <version>8.3.0</version>
+        <version>8.4.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
     <groupId>com.lorainelab</groupId>
     <artifactId>igbr</artifactId>
     <version>${igbr-version}</version>
-    <packaging>jar</packaging>
+    <packaging>bundle</packaging>
 
     <name>igbr</name>
 
@@ -47,41 +47,15 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-jar-plugin</artifactId>                
-                <configuration>
-                    <archive>  
-                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                    </archive>
-                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
-                </configuration>
+                <artifactId>maven-clean-plugin</artifactId>
             </plugin>
             <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${project.parent.basedir}/extbundles</directory>
-                            <includes>
-                                <include>${project.build.finalName}.jar</include>
-                            </includes>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin> 
+                <artifactId>maven-dependency-plugin</artifactId>
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>bundle-manifest</id>
-                        <phase>process-classes</phase>
-                        <goals>
-                            <goal>manifest</goal>
-                        </goals>
-                    </execution>
-                </executions>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
@@ -91,7 +65,6 @@
                         <Export-Package/>
                         <Bundle-Activator>com.lorainelab.igbr.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>This plugin opens up a socket which accepts IGB script commands, and was designed for IGB/R integration</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>
