--- a/developmentPlugins/IGBR/pom.xml
+++ b/developmentPlugins/IGBR/pom.xml
@@ -7,51 +7,41 @@
         <version>8.4.0</version>
         <relativePath>../../pom.xml</relativePath>
     </parent>
-    
-    <groupId>com.affymetrix</groupId>
-    <artifactId>igb-service</artifactId>
-    <version>${igb-service-version}</version>
-    
+    <groupId>com.lorainelab</groupId>
+    <artifactId>igbr</artifactId>
+    <version>${igbr-version}</version>
     <packaging>bundle</packaging>
 
-    <name>igb service</name>
+    <name>igbr</name>
 
     <dependencies>
         <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>affymetrix-common</artifactId>
-            <scope>provided</scope>            
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>igbSwingExt</artifactId>    
-            <scope>provided</scope>         
+            <artifactId>genometryImpl</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.affymetrix</groupId>
-            <artifactId>genometryImpl</artifactId>  
-            <scope>provided</scope>           
-        </dependency>        
+            <artifactId>igbSwingExt</artifactId>
+            <scope>provided</scope>	
+        </dependency>
         <dependency>
             <groupId>org.apache.felix</groupId>
             <artifactId>org.apache.felix.main</artifactId>
-            <scope>provided</scope> 
+            <scope>provided</scope>
         </dependency>
+        <!--Start of logging dependencies-->
         <dependency>
-            <groupId>com.affymetrix</groupId>
-            <artifactId>genoviz</artifactId>
-            <scope>provided</scope> 
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <scope>provided</scope> 
-        </dependency>
-        <dependency>
-            <groupId>com.lorainelab</groupId>
-            <artifactId>igb-genoviz-extensions-api</artifactId>
-            <scope>provided</scope> 
-        </dependency>
+        <!--End of logging dependencies-->
     </dependencies>
 
     <build>
@@ -61,24 +51,23 @@
             </plugin>
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>     
+            </plugin>
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>                
+                <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
                         <Embed-Transitive>true</Embed-Transitive>
-                        <Export-Package>
-                            com.affymetrix.igb.service.api
-                        </Export-Package>
-                        <Import-Package>*,com.affymetrix.igb;resolution:=optional</Import-Package>
+                        <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
+                        <Export-Package/>
+                        <Bundle-Activator>com.lorainelab.igbr.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                     </instructions>
                 </configuration>
-            </plugin>               
+            </plugin>
         </plugins>
     </build>
 
