--- a/plugins/IGBR/pom.xml
+++ b/plugins/IGBR/pom.xml
@@ -10,7 +10,7 @@
     <groupId>com.lorainelab</groupId>
     <artifactId>igbr</artifactId>
     <version>${igbr-version}</version>
-    <packaging>bundle</packaging>
+    <packaging>jar</packaging>
 
     <name>igbr</name>
 
@@ -47,15 +47,41 @@
     <build>
         <plugins>
             <plugin>
-                <artifactId>maven-clean-plugin</artifactId>
+                <artifactId>maven-jar-plugin</artifactId>                
+                <configuration>
+                    <archive>  
+                        <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+                    </archive>
+                    <outputDirectory>${project.parent.basedir}/extbundles</outputDirectory> 
+                </configuration>
             </plugin>
             <plugin>
-                <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <configuration>
+                    <filesets>
+                        <fileset>
+                            <directory>${project.parent.basedir}/extbundles</directory>
+                            <includes>
+                                <include>${project.build.finalName}.jar</include>
+                            </includes>
+                            <followSymlinks>false</followSymlinks>
+                        </fileset>
+                    </filesets>
+                </configuration>
+            </plugin> 
             <plugin>
                 <groupId>org.apache.felix</groupId>
-                <artifactId>maven-bundle-plugin</artifactId>
+                <artifactId>maven-bundle-plugin</artifactId>                
                 <extensions>true</extensions>
+                <executions>
+                    <execution>
+                        <id>bundle-manifest</id>
+                        <phase>process-classes</phase>
+                        <goals>
+                            <goal>manifest</goal>
+                        </goals>
+                    </execution>
+                </executions>
                 <configuration>
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
@@ -65,6 +91,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.lorainelab.igbr.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
+                        <Bundle-Description>This plugin opens up a socket which accepts IGB script commands, and was designed for IGB/R integration</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>
